kubernetes/monitoring/grafana/grafana-db.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-db
  namespace: monitoring2
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: grafana-db

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: monitoring2
  name: grafana-db
  labels:
    app: grafana-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grafana-db
  template:
    metadata:
      labels:
        app: grafana-db
    spec:
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: grafana-database
      containers:
        - name: grafana-db
          image: postgres:14
          imagePullPolicy: Always
          volumeMounts:
            - name: database
              mountPath: /opt/postgres/
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: 2Gi
              cpu: 500m
            limits:
              memory: 4Gi
              cpu: 1000m
          startupProbe:
            exec:
              command:
                - bash
                - -c
                - psql -U zevrant --dbname grafana -c SELECT 1
            failureThreshold: 7
            successThreshold: 1
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
                - bash
                - -c
                - psql -U zevrant --dbname grafana -c SELECT 1
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 20
