kubernetes/monitoring/grafana/loki.yml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitoring2
spec:
  type: NodePort
  ports:
    - port: 3100
      targetPort: 3100
      nodePort: 30139
      name: http
  selector:
    app: loki

---


#apiVersion: cert-manager.io/v1
#kind: Certificate
#metadata:
#  name: loki
#  namespace: monitoring2
#spec:
#  secretName: loki-tls
#  issuerRef:
#    name: acme-issuer
#  duration: 24h
#  renewBefore: 23h
#  dnsNames:
#    - loki.preprod.zevrant-services.com
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: monitoring2
  labels:
    app: loki
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "Always"
      volumes:
        - name: minio-credentials
          secret:
            secretName: minio-loki-credentials
        - name: runtime-config
          emptyDir:
            sizeLimit: 1Gi
#        - name: loki-cert
#          secret:
#            secretName: loki-tls
        - name: loki-data
          persistentVolumeClaim:
            claimName: loki-cache
        - name: loki-config
          configMap:
            name: loki
      imagePullSecrets:
        - name: regcred
      containers:
        - name: loki
          image: grafana/loki:latest
          imagePullPolicy: Always
          args:
            - -config.file=/mnt/config/config.yml
          volumeMounts:
#            - name: loki-cert
#              mountPath: /opt/acme/certs/
            - name: loki-data
              mountPath: /loki
            - name: runtime-config
              mountPath: /mnt/config
          ports:
            - containerPort: 3100
#            - containerPort: 9094
              name: loki-alert
              protocol: TCP
          startupProbe:
            httpGet:
              scheme: HTTP
              path: /ready
              port: 3100
            periodSeconds: 5
            failureThreshold: 8
            successThreshold: 1
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /ready
              port: 3100
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              memory: 1Gi
              cpu: 100m
            limits:
              memory: 4Gi
              cpu: 2000m
#          env:
#            - name: GF_SERVER_PROTOCOL
#              value: https
#            - name: GF_SERVER_CERT_FILE
#              value: /opt/acme/certs/tls.crt
#            - name: GF_SERVER_CERT_KEY
#              value: /opt/acme/certs/tls.key
#            - name: POD_IP
#              valueFrom:
#                fieldRef:
#                  fieldPath: status.podIP
#            - name: POSTGRES_HOST
#              value: grafana-db:5432
#            - name: POSTGRES_DATABASE_NAME
#              value: grafana
#            - name: POSTGRES_USER
#              value: zevrant
#            - name: POSTGTRES_DATABASE_PASSWORD
#              valueFrom:
#                secretKeyRef:
#                  name: grafana-db-password
#                  key: password
