kubernetes/monitoring/grafana/promtail.yml
apiVersion: v1
kind: Service
metadata:
  name: promtail
  namespace: monitoring
spec:
  ports:
    - port: 9080
      targetPort: 9080
      name: http
  selector:
    app: promtail

---

apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: promtail
spec:
  type: NodePort
  ports:
    - port: 9080
      targetPort: 9080
      nodePort: 30620
      name: http
  selector:
    app: promtail


#apiVersion: cert-manager.io/v1
#kind: Certificate
#metadata:
#  name: promtail
#  namespace: monitoring
#spec:
#  secretName: promtail-tls
#  issuerRef:
#    name: acme-issuer
#  duration: 24h
#  renewBefore: 23h
#  dnsNames:
#    - promtail.preprod.zevrant-services.com
---

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: monitoring
  labels:
    app: promtail
spec:
  selector:
    matchLabels:
      app: promtail
  template:
    metadata:
      labels:
        app: promtail
    spec:
      serviceAccountName: prometheus
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "Always"
      volumes:
        #        - name: promtail-cert
        #          secret:
        #            secretName: promtail-tls
        - name: promtail-config
          configMap:
            name: promtail
        - name: host-logs
          hostPath:
            path: /var/log
      imagePullSecrets:
        - name: harbor-ro
      containers:
        - name: promtail
          image: grafana/promtail:latest
          imagePullPolicy: Always
          args:
            - -config.file=/mnt/config/config.yml
          volumeMounts:
            #            - name: promtail-cert
            #              mountPath: /opt/acme/certs/
            - name: host-logs
              mountPath: /opt/host
            - name: promtail-config
              mountPath: /mnt/config
          ports:
            - containerPort: 9080
              #            - containerPort: 9094
              name: promtail-alert
              protocol: TCP
          startupProbe:
            httpGet:
              scheme: HTTP
              path: /targets
              port: 9080
            periodSeconds: 5
            failureThreshold: 4
            successThreshold: 1
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /targets
              port: 9080
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              memory: 1Gi
              cpu: 100m
            limits:
              memory: 4Gi
              cpu: 1000m
#          env:
#            - name: GF_SERVER_PROTOCOL
#              value: https
#            - name: GF_SERVER_CERT_FILE
#              value: /opt/acme/certs/tls.crt
#            - name: GF_SERVER_CERT_KEY
#              value: /opt/acme/certs/tls.key
#            - name: POD_IP
#              valueFrom:
#                fieldRef:
#                  fieldPath: status.podIP
#            - name: POSTGRES_HOST
#              value: grafana-db:5432
#            - name: POSTGRES_DATABASE_NAME
#              value: grafana
#            - name: POSTGRES_USER
#              value: zevrant
#            - name: POSTGTRES_DATABASE_PASSWORD
#              valueFrom:
#                secretKeyRef:
#                  name: grafana-db-password
#                  key: password
