kubernetes/monitoring/grafana/certificates.yml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: monitoring
  annotations:
#    nginx.ingress.kubernetes.io/backend-protocol: "https"
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#    ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: loki.preprod.zevrant-services.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-write
                port:
                  name: http-metrics
  ingressClassName: nginx
  tls:
    - hosts:
        - loki.preprod.zevrant-services.com
      secretName: loki-tls
