kubernetes/monitoring/grafana/grafana.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  ports:
    - port: 9094
      name: alerting
    - port: 3000
      name: https
  selector:
    app: grafana

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "https"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/ssl-passthrough: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: https://minio.zevrant-services.com/api/v1/buckets/$1
spec:
  rules:
    - host: grafana.preprod.zevrant-services.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  name: https
  ingressClassName: nginx


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "Always"
      volumes:
        - name: grafana-cert
          secret:
            secretName: grafana-tls
        - name: grafana-config
          configMap:
            name: grafana
      imagePullSecrets:
        - name: harbor-ro
      containers:
        - name: grafana
          image: docker.io/grafana/grafana-oss:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: grafana-cert
              mountPath: /opt/acme/certs/
            - name: grafana-config
              mountPath: /etc/grafana
          ports:
            - containerPort: 3000
              name: https
            - containerPort: 9094
              name: grafana-alert
              protocol: TCP
#          startupProbe:
#            httpGet:
#              scheme: HTTPS
#              path: /api/health
#              port: 3000
#            periodSeconds: 5
#            failureThreshold: 4
#            successThreshold: 1
#          livenessProbe:
#            httpGet:
#              scheme: HTTPS
#              path: /api/health
#              port: 3000
#            periodSeconds: 5
#            failureThreshold: 3
#            successThreshold: 1
